// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.panelmatch.client.internal;

option java_package = "org.wfanet.panelmatch.client.internal";
option java_multiple_files = true;

// An individual attempt of an `ExchangeWorkflow.Step`.
message ExchangeStepAttempt {
  // The ID of the step from the corresponding `ExchangeWorkflow`.
  string step_id = 1;

  // The index of the step from the corresponding `ExchangeWorkflow`.
  int32 step_index = 2;

  // Exchange steps may be attempted multiple times. The `attempt_number`
  // begins at 1 for the first attempt and increases by 1 for each subsequent
  // attempt.
  int32 attempt_number = 3;

  // State of an `ExchangeStepAttempt`.
  enum State {
    STATE_UNSPECIFIED = 0;

    // The attempt is currently active.
    IN_PROGRESS = 1;

    // The attempt completed successfully. Terminal state.
    SUCCEEDED = 2;

    // The attempt encountered a failure but can be retried by a new attempt.
    // Terminal state.
    FAILED = 3;

    // The attempt encountered a permanent failure and no further attempts
    // should be made. Terminal state.
    FAILED_STEP = 4;
  }
}
